Externalize port number as well

--- a/complete/eureka-client/src/main/resources/application.yml
+++ b/complete/eureka-client/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://${server}:8761/eureka/
+      defaultZone: http://${server}:${port}/eureka/
   instance:
     hostname: ${server}
     nonSecurePort: 80
